objects/CRM_Annual_KPI__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Applications_Settled_This_Year__c</fullName>
        <label>Applications Settled This Year</label>
        <summarizedField>CRM_KPI__c.CRM_Achieved_This_Quarter__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_KPI__c.CRM_Achieved_This_Quarter__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_KPI__c.CRM_Achieved_This_Quarter__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_KPI__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Settled</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_KPI__c.CRM_Annual_KPI__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Applications_Submitted_This_Year__c</fullName>
        <label>Applications Submitted This Year</label>
        <summarizedField>CRM_KPI__c.CRM_Achieved_This_Quarter__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_KPI__c.CRM_Achieved_This_Quarter__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_KPI__c.CRM_Achieved_This_Quarter__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_KPI__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Applications Submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_KPI__c.CRM_Annual_KPI__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Leads_Converted_This_Year__c</fullName>
        <label>Leads Converted This Year</label>
        <summarizedField>CRM_KPI__c.CRM_Achieved_This_Quarter__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_KPI__c.CRM_Achieved_This_Quarter__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_KPI__c.CRM_Achieved_This_Quarter__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_KPI__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leads Conversion</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_KPI__c.CRM_Annual_KPI__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Target_This_Year_Applications_Settle__c</fullName>
        <label>Target This Year(Applications To Settle)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Target_This_Year_Applications_Submit__c</fullName>
        <label>Target This Year(Applications To Submit)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Target_This_Year_Leads_To_Convert__c</fullName>
        <label>Target This Year(Leads To Convert)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRM_Annual_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017-2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018-2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019-2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020-2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021-2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022-2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023-2024</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Annual KPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_User__c</columns>
        <columns>CRM_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Annual KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>